<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Linkyard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Log Out</string>
    <string name="tags">Tags</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="twitter">Twitter</string>
    <string name="email">eMail</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="share_article">Share Article</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="empty_link_list">You haven\'t added any links yet.</string>

</resources>
